--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -1,60 +1,231 @@
 {
     "color": {
         "bg": {
-            "accent": {
+            "layout": {
+                "default":{
+                    "value": "rgba(250, 250, 251, 1)"
+                }
+            },
+            "primary":{
                 "normal": {
-                    "value": "#FA6258"
+                    "value":"rgba(255, 255, 255, 1)"
                 },
                 "hover": {
-                    "value": "#D74043"
+                    "value":"rgba(246, 247, 248, 1)"
                 },
-                "focus": {
-                    "value": "#B32C3A"
+                "active": {
+                    "value":"rgba(246, 247, 248, 1)"
                 },
-                "disable": {
-                    "value": "#F5F5F7"
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "secondary": {
-                "normal": {
-                    "value": "#E8E9ED"
+                "normal":{
+                    "value": "rgba(238, 239, 242, 1)"
                 },
-                "hover": {
-                    "value": "#D0D1D7"
+                "hover":{
+                    "value": "rgba(232, 233, 237, 1)"
                 },
-                "focus": {
-                    "value": "#A0A2AB"
+                "active":{
+                    "value": "rgba(208, 209, 215, 1)"
                 },
-                "disable": {
-                    "value": "#F5F5F7"
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
-
-            "layout": {
-                "value": "#F5F5F7"
+            "accent":{
+                "normal": {
+                    "value":"rgba(250, 98, 88, 1)"
+                },
+                "hover": {
+                    "value":"rgba(215, 64, 67, 1)"
+                },
+                "active": {
+                    "value":"rgba(179, 44, 58, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
+                }
+            },
+            "help": {
+                "normal":{
+                    "value": "rgba(141, 95, 255, 1)"
+                },
+                "hover":{
+                    "value": "rgba(108, 69, 219, 1)"
+                },
+                "active":{
+                    "value": "rgba(78, 47, 183, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
+                }
+            },
+            "contrast": {
+                "normal":{
+                    "value": "rgba(33, 33, 38, 1)"
+                },
+                "hover":{
+                    "value": "rgba(58, 58, 65, 1)"
+                },
+                "active":{
+                    "value": "rgba(16, 16, 20, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
+                }
+            },
+            "status-info": {
+                "normal":{
+                    "value":"rgba(235, 243, 255, 1)"
+                }
+            },
+            "status-danger": {
+                "normal":{
+                    "value": "rgba(252, 237, 232, 1)"
+                }
+            },
+            "status-warning": {
+                "normal":{
+                    "value": "rgba(255, 246, 235, 1)"
+                }
+            },
+            "status-help": {
+                "normal":{
+                    "value": "rgba(242, 235, 255, 1)"
+                }
+            },
+            "status-sucsess": {
+                "normal":{
+                    "value": "rgba(244, 250, 219, 1)"
+                }
+            },
+            "bonus-default": {
+                "normal":{
+                    "value": "rgba(217, 74, 64, 1)"
+                }
+            },
+            "bonus-gold": {
+                "normal":{
+                    "value": "rgba(252, 133, 24, 1)"
+                }
+            },
+            "bonus-platinum": {
+                "normal":{
+                    "value": "rgba(19, 48, 109, 1)"
+                }
+            },
+            "dark": {
+                "normal":{
+                    "value": "rgba(208, 209, 215, 1)",
+                    "description": "Используется для серого фона компонентов, которым не хватает контраста с secondary"
+                }
+            },
+            "transparent":{
+                "default":{
+                    "value": "rgba(0, 0, 0, 0)"
+                }
             }
         },
 
 
         "text": {
             "primary": {
-                "default": {
-                    "value": "#101014"
+                "normal": {
+                    "value": "rgba(16, 16, 20, 1)"
+                },
+                "hover": {
+                    "value": "rgba(81, 82, 90, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "secondary": {
                 "default": {
-                    "value": "#51525A"
+                    "value": "rgba(81, 82, 90, 1)"
+                }
+            },
+            "placeholder": {
+                "default": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "contrast": {
                 "default": {
-                    "value": "#FFFFFF"
+                    "value": "rgba(255, 255, 255, 1)"
                 }
             },
-            "default": {
-                "disable": {
-                    "value": "#A0A2AB"
+            "accent": {
+                "default": {
+                    "value": "rgba(250, 98, 88, 1)"
+                }
+            },
+            "success": {
+                "default": {
+                    "value": "rgba(133, 188, 12, 1)"
+                }
+            },
+            "info": {
+                "default": {
+                    "value": "rgba(0, 65, 163, 1)"
+                }
+            },
+            "warning": {
+                "default": {
+                    "value": "rgba(255, 139, 0, 1)"
+                }
+            },
+            "danger": {
+                "default": {
+                    "value": "rgba(222, 53, 11, 1)"
+                }
+            },
+            "static-white": {
+                "default": {
+                    "value": "rgba(255, 255, 255, 1)"
+                }
+            }
+            
+        },
+        "border":{
+            "decorative":{
+                "default":{
+                    "value": "rgba(232, 233, 237, 1)"
+                }
+            },
+            "primary":{
+                "normal":{
+                    "value": "rgba(208, 209, 215, 1)"
+                },
+                "hover":{
+                    "value": "rgba(58, 58, 65, 1)"
+                },
+                "active":{
+                    "value": "rgba(16, 16, 20, 1)"
+                }
+            },
+            "accent":{
+                "normal":{
+                    "value": "rgba(250, 98, 88, 1)"
+                }
+            },
+            "success":{
+                "normal":{
+                    "value": "rgba(133, 188, 12, 1)"
+                }
+            },
+            "danger":{
+                "normal":{
+                    "value": "rgba(222, 53, 11, 1)"
+                }
+            }
+        },
+        "overlay": {
+            "primary":{
+                "default":{
+                    "value": "rgba(33, 33, 38, 0.56)"
                 }
             }
         }
